migrate to Jekyll

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,69 +1,171 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{liu2010multispectral,
+  title={Multispectral image fusion method based on intensity-hue-saturation and nonsubsampled three-channels non-separable wavelets},
+  author={Liu, Bin and Liu, Weijie and Peng, Jiaxiong},
+  journal={Chinese Optics Letters},
+  volume={8},
+  number={4},
+  pages={384--387},
+  year={2010},
+  publisher={Chinese Optical Society}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@article{liu2013construction,
+  title={Construction method of three-channel non-separable symmetric wavelets with arbitrary dilation matrices and its applications in multispectral image fusion},
+  author={Liu, Bin and Li, Kai and Liu, Weijie and Liu, Fei},
+  journal={IET Image Processing},
+  volume={7},
+  number={7},
+  pages={679--685},
+  year={2013},
+  publisher={IET Digital Library}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf}
+@inproceedings{liu2011fusion,
+  title={Fusion of multi-spectral image using non-separable additive wavelets for high spatial resolution enhancement},
+  author={Liu, Bin and Liu, Weijie},
+  booktitle={International Conference Image Analysis and Recognition},
+  pages={90--99},
+  year={2011},
+  organization={Springer}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{liu2013multi,
+  title={Multi-Spectral Image Fusion Method Based on Sampled Two Channel Non-Separable Wavelets},
+  author={Liu, Bin and Zhu, Qing and Hu, Fu-Qiang and Liu, Wei-Jie},
+  journal={Acta Electronica Sinica},
+  volume={4},
+  year={2013}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{wang2016novel,
+  abbr={SCN},
+  title={A novel covert channel detection method in cloud based on XSRM and improved event association algorithm},
+  author={Wang, Lina and Liu, Weijie and Kumar, Neeraj and He, Debiao and Tan, Cheng and Gao, Debin},
+  journal={Security and Communication Networks},
+  volume={9},
+  number={16},
+  pages={3543--3557},
+  year={2016}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{liu2011multi,
+  title={Multi-focus Image Fusion of Nonseparable Wavelet Based on Blocking [J]},
+  author={Liu, Wei-Jie and Liu, Bin and Peng, Jia-Xiong},
+  journal={Computer Engineering},
+  volume={2},
+  year={2011}
+}
+
+@inproceedings{liu2017demand,
+  abbr={ESORICS},
+  title={On-demand time blurring to support side-channel defense},
+  author={Liu, Weijie and Gao, Debin and Reiter, Michael K},
+  booktitle={European Symposium on Research in Computer Security},
+  pages={210--228},
+  year={2017},
+  organization={Springer, Cham}
+}
+
+@inproceedings{liu2011fusion,
+  title={Fusion of multi-focus images based on three channel non-separable symmetrical wavelet filter banks},
+  author={Liu, Weijie and Liu, Bin},
+  booktitle={2011 International Conference on Electrical and Control Engineering},
+  pages={5937--5940},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{liu2018factoring,
+  title={Factoring two-dimensional two-channel non-separable stripe filter banks into lifting steps},
+  author={Liu, Bin and Liu, Weijie},
+  journal={IET Image Processing},
+  volume={12},
+  number={7},
+  pages={1185--1194},
+  year={2018},
+  publisher={IET Digital Library}
+}
+
+@inproceedings{liu2011fusion,
+  title={Fusion of multispectral image based on three channel non-separable wavelet filter banks},
+  author={Liu, Weijie and Liu, Bin},
+  booktitle={2011 International Conference on Multimedia Technology},
+  pages={3531--3534},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{liu2018lifting,
+  title={The lifting factorization of 2D 4-channel nonseparable wavelet transforms},
+  author={Liu, Bin and Liu, Weijie},
+  journal={Information Sciences},
+  volume={456},
+  pages={113--130},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@inproceedings{liu2017construction,
+  abbr={PCM},
+  title={Construction of Sampling Two-Channel Nonseparable Wavelet Filter Bank and Its Fusion Application for Multispectral Image Pansharpening},
+  author={Liu, Bin and Liu, Weijie and Xu, Longxiang},
+  booktitle={Pacific Rim Conference on Multimedia},
+  pages={859--868},
+  year={2017},
+  organization={Springer, Cham}
+}
+
+@article{tan2018capt,
+  title={CAPT: Context-aware provenance tracing for attack investigation},
+  author={Tan, Cheng and Zhao, Lei and Liu, Weijie and Xu, Lai and Wang, Lina},
+  journal={China Communications},
+  volume={15},
+  number={2},
+  pages={153--169},
+  year={2018},
+  publisher={IEEE}
+}
+
+@inproceedings{qiang2018controlled,
+  abbr={ICA3PP},
+  title={Controlled Channel Attack Detection Based on Hardware Virtualization},
+  author={Qiang, Chenyi and Liu, Weijie and Wang, Lina and Yu, Rongwei},
+  booktitle={International Conference on Algorithms and Architectures for Parallel Processing},
+  pages={406--420},
+  year={2018},
+  organization={Springer, Cham}
+}
+
+@article{xu2019memway,
+  title={Memway: in-memorywaylaying acceleration for practical rowhammer attacks against binaries},
+  author={Xu, Lai and Yu, Rongwei and Wang, Lina and Liu, Weijie},
+  journal={Tsinghua Science and Technology},
+  volume={24},
+  number={5},
+  pages={535--545},
+  year={2019},
+  publisher={TUP}
+}
+
+@inproceedings{gao2011preventing,
+  abbr={SecureCom},
+  title={Preventing secret data leakage from foreign mappings in virtual machines},
+  author={Gao, Hanjun and Wang, Lina and Liu, Wei and Peng, Yang and Zhang, Hao},
+  booktitle={International Conference on Security and Privacy in Communication Systems},
+  pages={436--445},
+  year={2011},
+  organization={Springer}
+}
+
+@inproceedings{ma2014control,
+  abbr={SecureCom},
+  title={Control flow obfuscation using neural network to fight concolic testing},
+  author={Ma, Haoyu and Ma, Xinjie and Liu, Weijie and Huang, Zhipeng and Gao, Debin and Jia, Chunfu},
+  booktitle={International Conference on Security and Privacy in Communication Networks},
+  pages={287--304},
+  year={2014},
+  organization={Springer}
 }
