--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -171,6 +171,7 @@
 }
 
 @inproceedings{9443979,
+  abbr         = {ISPA},
   author    = {Lu, Yaosong and Liu, Weijie and Wang, Wenhao},
   booktitle = {2020 IEEE Intl Conf on Parallel   Distributed Processing with Applications, Big Data   Cloud Computing, Sustainable Computing   Communications, Social Computing   Networking (ISPA/BDCloud/SocialCom/SustainCom)},
   title     = {Atomic Restriction: Hardware Atomization to Defend Against Preemption Attacks},
@@ -182,6 +183,7 @@
 }
 
 @inproceedings{10.1145/3445814.3446765,
+  abbr         = {ASPLOS},
   author    = {Meng, Xiaozhu and Liu, Weijie},
   title     = {Incremental CFG Patching for Binary Rewriting},
   year      = {2021},
