--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -170,11 +170,11 @@
   organization = {Springer}
 }
 
-@inproceedings{9443979,
-  abbr         = {ISPA},
+@inproceedings{lu2020atomic,
+  abbr      = {ISPA},
+  title     = {Atomic Restriction: Hardware Atomization to Defend Against Preemption Attacks},
   author    = {Lu, Yaosong and Liu, Weijie and Wang, Wenhao},
   booktitle = {2020 IEEE Intl Conf on Parallel   Distributed Processing with Applications, Big Data   Cloud Computing, Sustainable Computing   Communications, Social Computing   Networking (ISPA/BDCloud/SocialCom/SustainCom)},
-  title     = {Atomic Restriction: Hardware Atomization to Defend Against Preemption Attacks},
   year      = {2020},
   volume    = {},
   number    = {},
@@ -182,10 +182,10 @@
   doi       = {10.1109/ISPA-BDCloud-SocialCom-SustainCom51426.2020.00071}
 }
 
-@inproceedings{10.1145/3445814.3446765,
-  abbr         = {ASPLOS},
-  author    = {Meng, Xiaozhu and Liu, Weijie},
+@inproceedings{meng2021incremental,
+  abbr      = {ASPLOS},
   title     = {Incremental CFG Patching for Binary Rewriting},
+  author    = {Meng, Xiaozhu and Liu, Weijie},
   year      = {2021},
   isbn      = {9781450383172},
   publisher = {Association for Computing Machinery},
