--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -79,6 +79,7 @@
 }
 
 @article{liu2018factoring,
+  abbr      = {IET},
   title     = {Factoring two-dimensional two-channel non-separable stripe filter banks into lifting steps},
   author    = {Liu, Bin and Liu, Weijie},
   journal   = {IET Image Processing},
@@ -193,7 +194,7 @@
   url       = {https://doi.org/10.1145/3445814.3446765},
   doi       = {10.1145/3445814.3446765},
   booktitle = {Proceedings of the 26th ACM International Conference on Architectural Support for Programming Languages and Operating Systems},
-  pages     = {1020–1033},
+  pages     = {1020-1033},
   numpages  = {14},
   keywords  = {binary code patching, binary analysis reliability, trampoline placement},
   location  = {Virtual, USA},
