--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,42 @@
 ---
 ---
 
+@inproceedings{liu2021practical,
+  title={Practical and Efficient in-Enclave Verification of Privacy Compliance},
+  author={Liu, Weijie and Wang, Wenhao and Chen, Hongbo and Wang, XiaoFeng and Lu, Yaosong and Chen, Kai and Wang, Xinyu and Shen, Qintao and Chen, Yi and Tang, Haixu},
+  booktitle={2021 51st Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)},
+  pages={413--425},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{wang2021trust,
+  title={Trust Beyond Border: Lightweight, Verifiable User Isolation for Protecting In-Enclave Services},
+  author={Wang, Wenhao and Liu, Weijie and Chen, Hongbo and Wang, Xiaofeng and Tian, Hongliang and Lin, Dongdai},
+  journal={IEEE Transactions on Dependable and Secure Computing},
+  year={2021},
+  publisher={IEEE}
+}
+
+@inproceedings{li2022robbery,
+  title={Robbery on devops: Understanding and mitigating illicit cryptomining on continuous integration service platforms},
+  author={Li, Zhi and Liu, Weijie and Chen, Hongbo and Wang, XiaoFeng and Liao, Xiaojing and Xing, Luyi and Zha, Mingming and Jin, Hai and Zou, Deqing},
+  booktitle={2022 IEEE Symposium on Security and Privacy (SP)},
+  pages={2397--2412},
+  year={2022},
+  organization={IEEE}
+}
+
+@article{liu2022retrofitting,
+  title={Retrofitting LBR Profiling to Enhance Virtual Machine Introspection},
+  author={Liu, Weijie and Liu, Ximeng and Li, Zhi and Liu, Bin and Yu, Rongwei and Wang, Lina},
+  journal={IEEE Transactions on Information Forensics and Security},
+  volume={17},
+  pages={2311--2323},
+  year={2022},
+  publisher={IEEE}
+}
+
 @article{liu2010multispectral,
   title     = {Multispectral image fusion method based on intensity-hue-saturation and nonsubsampled three-channels non-separable wavelets},
   author    = {Liu, Bin and Liu, Weijie and Peng, Jiaxiong},
