--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 @inproceedings{liu2021practical,
+  abbr    = {DSN},
   title={Practical and Efficient in-Enclave Verification of Privacy Compliance},
   author={Liu, Weijie and Wang, Wenhao and Chen, Hongbo and Wang, XiaoFeng and Lu, Yaosong and Chen, Kai and Wang, Xinyu and Shen, Qintao and Chen, Yi and Tang, Haixu},
   booktitle={2021 51st Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)},
@@ -11,6 +12,7 @@
 }
 
 @article{wang2021trust,
+  abbr    = {TDSC},
   title={Trust Beyond Border: Lightweight, Verifiable User Isolation for Protecting In-Enclave Services},
   author={Wang, Wenhao and Liu, Weijie and Chen, Hongbo and Wang, Xiaofeng and Tian, Hongliang and Lin, Dongdai},
   journal={IEEE Transactions on Dependable and Secure Computing},
@@ -19,6 +21,7 @@
 }
 
 @inproceedings{li2022robbery,
+  abbr    = {Oakland},
   title={Robbery on devops: Understanding and mitigating illicit cryptomining on continuous integration service platforms},
   author={Li, Zhi and Liu, Weijie and Chen, Hongbo and Wang, XiaoFeng and Liao, Xiaojing and Xing, Luyi and Zha, Mingming and Jin, Hai and Zou, Deqing},
   booktitle={2022 IEEE Symposium on Security and Privacy (SP)},
@@ -28,6 +31,7 @@
 }
 
 @article{liu2022retrofitting,
+  abbr    = {TIFS},
   title={Retrofitting LBR Profiling to Enhance Virtual Machine Introspection},
   author={Liu, Weijie and Liu, Ximeng and Li, Zhi and Liu, Bin and Yu, Rongwei and Wang, Lina},
   journal={IEEE Transactions on Information Forensics and Security},
