--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,28 @@
 ---
 ---
 
+@inproceedings{li2023lost,
+  abbr    = {CCS},
+  title={Lost along the Way: Understanding and Mitigating Path-Misresolution Threats to Container Isolation},
+  author={Li, Zhi and Liu, Weijie and Wang, XiaoFeng and Yuan, Bin and Tian, Hongliang and Jin, Hai and Yan, Shoumeng},
+  booktitle={Proceedings of the 2023 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={3063--3077},
+  year={2023},
+  organization={ACM}
+}
+
+@article{kuo2022evolving,
+  abbr    = {JAMIA},
+  title={The evolving privacy and security concerns for genomic data analysis and sharing as observed from the iDASH competition},
+  author={Kuo, Tsung-Ting and Jiang, Xiaoqian and Tang, Haixu and Wang, XiaoFeng and Harmanci, Arif and Kim, Miran and Post, Kai and Bu, Diyue and Bath, Tyler and Kim, Jihoon and others},
+  journal={Journal of the American Medical Informatics Association},
+  volume={29},
+  number={12},
+  pages={2182--2190},
+  year={2022},
+  publisher={Oxford University Press}
+}
+
 @inproceedings{liu2021practical,
   abbr    = {DSN},
   title={Practical and Efficient in-Enclave Verification of Privacy Compliance},
