--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -75,6 +75,7 @@
 }
 
 @article{liu2013construction,
+  abbr      = {IET},
   title     = {Construction method of three-channel non-separable symmetric wavelets with arbitrary dilation matrices and its applications in multispectral image fusion},
   author    = {Liu, Bin and Li, Kai and Liu, Weijie and Liu, Fei},
   journal   = {IET Image Processing},
@@ -86,6 +87,7 @@
 }
 
 @inproceedings{liu2011fusion,
+  abbr         = {ICIAR},
   title        = {Fusion of multi-spectral image using non-separable additive wavelets for high spatial resolution enhancement},
   author       = {Liu, Bin and Liu, Weijie},
   booktitle    = {International Conference Image Analysis and Recognition},
