--- a/_news/dsn2021.md
+++ b/_news/dsn2021.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Paper got accepted, at DSN, finally!
+title: Paper got accepted, at DSN, finally.
 date: 2021-04-28 20:28:00-0400
 inline: false
 ---
