--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -96,16 +96,6 @@
   publisher = {IET Digital Library}
 }
 
-@article{liu2018lifting,
-  title     = {The lifting factorization of 2D 4-channel nonseparable wavelet transforms},
-  author    = {Liu, Bin and Liu, Weijie},
-  journal   = {Information Sciences},
-  volume    = {456},
-  pages     = {113--130},
-  year      = {2018},
-  publisher = {Elsevier}
-}
-
 @inproceedings{liu2017construction,
   abbr         = {PCM},
   title        = {Construction of Sampling Two-Channel Nonseparable Wavelet Filter Bank and Its Fusion Application for Multispectral Image Pansharpening},
@@ -114,17 +104,6 @@
   pages        = {859--868},
   year         = {2017},
   organization = {Springer, Cham}
-}
-
-@article{tan2018capt,
-  title     = {CAPT: Context-aware provenance tracing for attack investigation},
-  author    = {Tan, Cheng and Zhao, Lei and Liu, Weijie and Xu, Lai and Wang, Lina},
-  journal   = {China Communications},
-  volume    = {15},
-  number    = {2},
-  pages     = {153--169},
-  year      = {2018},
-  publisher = {IEEE}
 }
 
 @inproceedings{qiang2018controlled,
@@ -138,6 +117,7 @@
 }
 
 @article{xu2019memway,
+  abbr      = {Tsinghua Sci Tech}
   title     = {Memway: in-memorywaylaying acceleration for practical rowhammer attacks against binaries},
   author    = {Xu, Lai and Yu, Rongwei and Wang, Lina and Liu, Weijie},
   journal   = {Tsinghua Science and Technology},
