--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -117,7 +117,7 @@
 }
 
 @article{xu2019memway,
-  abbr      = {Tsinghua Sci Tech}
+  abbr      = {Tsinghua Sci Tech},
   title     = {Memway: in-memorywaylaying acceleration for practical rowhammer attacks against binaries},
   author    = {Xu, Lai and Yu, Rongwei and Wang, Lina and Liu, Weijie},
   journal   = {Tsinghua Science and Technology},
