--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @inproceedings{li2023lost,
   abbr    = {CCS},
   title={Lost along the Way: Understanding and Mitigating Path-Misresolution Threats to Container Isolation},
-  author={Li, Zhi and Liu, Weijie* and Wang, XiaoFeng and Yuan, Bin and Tian, Hongliang and Jin, Hai and Yan, Shoumeng},
+  author={Li, Zhi and Liu, Weijie and Wang, XiaoFeng and Yuan, Bin and Tian, Hongliang and Jin, Hai and Yan, Shoumeng},
   booktitle={Proceedings of the 2023 ACM SIGSAC Conference on Computer and Communications Security},
   pages={3063--3077},
   year={2023},
