--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@inproceedings {tian2025atomic,
+  abbr    = {FAST},
+  author = {Hongliang Tian and Xinyi Yu and Shaowei Song and Qingsong Chen and Zhihao Zhang and Shiyu Wang and Weijie Liu and Erci Xu and Shoumeng Yan and Yiming Zhang},
+  title = {{AtomicDisk}: A Secure Virtual Disk for {TEEs} against Eviction Attacks},
+  booktitle = {23rd USENIX Conference on File and Storage Technologies (FAST 25)},
+  year = {2025},
+  isbn = {978-1-939133-45-8},
+  address = {Santa Clara, CA},
+  pages = {449--459},
+  publisher = {USENIX Association},
+}
+
 @inproceedings{li2023lost,
   abbr    = {CCS},
   title={Lost along the Way: Understanding and Mitigating Path-Misresolution Threats to Container Isolation},
