--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -75,6 +75,16 @@
   publisher={IEEE}
 }
 
+@inproceedings{widanage2021hysec,
+  abbr    = {CLOUD},
+  title={HySec-Flow: privacy-preserving genomic computing with SGX-based big-data analytics framework},
+  author={Widanage, Chathura and Liu, Weijie and Li, Jiayu and Chen, Hongbo and Wang, XiaoFeng and Tang, Haixu and Fox, Judy},
+  booktitle={Proceedings. IEEE International Conference on Cloud Computing},
+  volume={2021},
+  pages={733},
+  year={2021}
+}
+
 @article{wang2016novel,
   abbr    = {SCN},
   title   = {A novel covert channel detection method in cloud based on XSRM and improved event association algorithm},
